tests/fixtures/positive/naming/LambdaParameterNaming.kt
package naming

fun example() {
    val list = listOf(1, 2, 3)
    list.forEach { X -> println(X) }
}
