tests/fixtures/negative/naming/LambdaParameterNaming.kt
package naming

fun example() {
    val list = listOf(1, 2, 3)
    list.forEach { item -> println(item) }
}
